# kuber-scala

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.autoscaler  Dockerfile.cluster-creator  README.md  README_EN.md  build.sbt  docker-compose.yaml  sample.hcl  scripts.sh
autoscaler/src/main/resources/: application.conf
autoscaler/src/main/scala/: main.scala
autoscaler/src/main/scala/autoscaler/: main.scala
hcl_generator/src/main/scala/: main.scala
hcl_generator/src/main/scala/cluster_creator/: main.scala
hcl_generator/src/main/scala/terraform/: HCLImplicits.scala  Helpers.scala  Traits.scala  main.scala
hcl_generator/src/test/scala/YandexClusterTest/: YandexClusterTest.scala
hcl_generator/src/test/scala/integrational/: YandexClusterTest.scala
providers/: yandex.scala
src/main/antlr/: Parser.scala  terraform.g4
src/main/scala/: PodDisruptionBudget.scala  main.scala  skuberMain.scala
src/main/scala/common/utils/: UUID.scala
src/main/scala/patched/skuber/: Operations.scala  PodDisruptionBudget.scala  ReplicaSet.scala  Utils.scala  main.scala
src/main/scala/skuber/: Operations.scala  PodDisruptionBudget.scala  ReplicaSet.scala  Utils.scala  main.scala
src/main/scala/skuber/custom/: KuberInfo.scala  MyEvent.scala  MyJsonProtocol.scala  MyNode.scala  MyPod.scala  MyWatchEvent.scala
src/main/scala/terraform/: GeneralClasses.scala  HCLImplicits.scala  Helpers.scala  Providers.scala  TerraformConfig.scala  TerraformGenerator.scala  Traits.scala  main.scala
tests/: pyproject.toml
tests/end-to-end/: test.py
(+60 files in other folders)
