[tool.poetry]
name = "k3s-scaling-test"
version = "0.1.0"
description = "Test script for k3s cluster scaling"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "^29.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"